--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,16 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: 18.169.3.36
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: false
-    network: tcp
-  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
     server: 45.58.153.25
@@ -28,28 +18,13 @@ proxies:
     network: ws
     ws-opts:
       path: /path/1702961716738
-  - &id003
+  - &id002
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 45.58.145.200
-    port: 30000
+    server: 104.21.75.246
+    port: 80
     cipher: auto
-    uuid: 55545f9e-a561-454a-8dc0-8bc110e6b1c9
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1702301098557
-      headers:
-        host: www.51652109.xyz
-  - &id004
-    name: 🇨🇳_CN_中国->🇲🇽_MX_墨西哥
-    type: vmess
-    server: cu.awslcn.info
-    port: 25284
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -57,31 +32,307 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: cu.awslcn.info
-  - &id005
-    name: 🇫🇷_FR_法国
+        host: sbl2.shabijichang.com
+  - &id003
+    name: 🇬🇮_GI_直布罗陀->🇬🇧_GB_英国
+    type: trojan
+    server: 95.164.69.115
+    port: 17728
+    udp: true
+    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
+    sni: gbs.pptv-tv.store
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇨🇦_CA_加拿大_1
     type: vmess
-    server: 146.59.147.250
-    port: 29776
+    server: 45.138.70.247
+    port: 38767
     cipher: auto
-    uuid: 82447abf-dcb9-408a-9ca6-79e0a7698d08
+    uuid: ec3936a2-f50d-48e8-b0bc-7929067bcc00
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id006
+    network: ws
+    ws-opts:
+      path: /11451
+  - &id005
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: 18.216.249.151
-    port: 46403
+    server: 68.183.159.199
+    port: 2092
     cipher: auto
-    uuid: 28dc6b61-09d8-4c19-b655-233cfb535567
+    uuid: 038e2714-5cbf-4812-fcfb-8726665c63b6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /telegram:@hkaa0
+  - &id006
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 159.75.178.50
+    port: 47551
+    cipher: auto
+    uuid: 2500a228-8c00-4934-81e0-22281c015a33
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id007
+    name: 🇮🇷_IR_伊朗_1
+    type: vmess
+    server: 185.235.137.9
+    port: 80
+    cipher: auto
+    uuid: 781dfd50-3d2f-4d5b-99ef-47fa111bddb8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Y07GAOt43udo1xvoAgfajHtB
+  - &id008
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 46.29.166.237
+    port: 47555
+    cipher: auto
+    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id007
-    name: 🇨🇦_CA_加拿大_1
+  - &id009
+    name: 🇮🇷_IR_伊朗_2
+    type: vmess
+    server: 79.143.84.117
+    port: 24141
+    cipher: auto
+    uuid: 46465bbe-628a-4988-ae3c-0c164237a039
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 132.145.132.227
+    port: 37121
+    cipher: auto
+    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id011
+    name: 🇸🇪_SE_瑞典
+    type: vmess
+    server: www.shopify.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: els_cdnone.yunjisuan.cf
+  - &id012
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: www.visa.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgtow_cdn.yunjisuan.cf
+  - &id013
+    name: 🇩🇪_DE_德国_1
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: e86e242e-b5d5-46ae-a410-3684f7d70ac2
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 144.202.81.122
+    port: 25514
+    cipher: auto
+    uuid: 13bf827e-55cd-4b46-e9f1-b7f9ffbe7955
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id015
+    name: 🇺🇸_US_美国_7
+    type: trojan
+    server: hk2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: fb73fbf9-ed99-44ca-8eba-ccdcd7d59f67
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: trojan
+    server: 89.221.224.93
+    port: 80
+    udp: true
+    password: 9e77b491-73d4-4ea3-985b-cfe3ae583580
+    sni: is1-t.sshmax.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 217.160.45.31
+    port: 8880
+    cipher: auto
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id018
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: fr1.test3.net
+    port: 443
+    udp: true
+    password: 2952fe70-971e-11ee-b003-1239d0255272
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: trojan
+    server: gbs.pptv-tv.store
+    port: 17728
+    udp: true
+    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇱🇹_LT_立陶宛
+    type: vmess
+    server: 84.32.231.244
+    port: 3001
+    cipher: auto
+    uuid: 8efe48f5-22e2-4f0c-93da-665a4bc64ab1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: Telegram-Channel.hkaa0_shop.66688888.xyz
+    port: 2092
+    cipher: auto
+    uuid: 038e2714-5cbf-4812-fcfb-8726665c63b6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /telegram:@hkaa0
+  - &id022
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 46.182.107.15
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702215223320
+  - &id023
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id024
+    name: 🇺🇸_US_美国_10
+    type: trojan
+    server: us5.msio.uk
+    port: 50089
+    udp: true
+    password: 801725d8-08df-4a20-b69a-e534b8c4ede7
+    skip-cert-verify: true
+    network: tcp
+  - &id025
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 45.58.153.24
+    port: 30000
+    cipher: auto
+    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702392255355
+  - &id026
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: cdn-13.cdn2cdn.com
+    port: 2083
+    udp: true
+    password: qG9K8AGnn9XH5jUqeFu96g
+    sni: cdn13.cdn2cdn.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn13.cdn2cdn.com
+  - &id027
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 35.178.97.234
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id028
+    name: 🇨🇦_CA_加拿大_2
     type: vmess
     server: 142.171.202.130
     port: 443
@@ -95,8 +346,39 @@ proxies:
       path: /path/1702650992491
       headers:
         host: www.87981532.xyz
-  - &id008
-    name: 🇮🇷_IR_伊朗
+  - &id029
+    name: 🇺🇸_US_美国_12
+    type: trojan
+    server: 23.162.168.236
+    port: 50089
+    udp: true
+    password: 801725d8-08df-4a20-b69a-e534b8c4ede7
+    sni: us5.msio.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 144.202.84.47
+    port: 57848
+    cipher: auto
+    uuid: e48643e7-0462-4055-f796-6ca6aa9f946d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇷🇺_RU_俄罗斯联邦_3
+    type: trojan
+    server: 89.221.224.94
+    port: 80
+    udp: true
+    password: 28c79056-ccfd-4cc1-93d4-c337cc782e65
+    sni: is2-t.sshmax.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇮🇷_IR_伊朗_3
     type: vmess
     server: duss.celebjared.pk
     port: 80
@@ -110,70 +392,10 @@ proxies:
       path: /Y07GAOt43udo1xvoAgfajHtB
       headers:
         host: duss.celebjared.pk
-  - &id009
-    name: 🇨🇦_CA_加拿大_2
+  - &id033
+    name: 🇺🇸_US_美国_14
     type: vmess
-    server: 142.171.122.68
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1703231262875
-      headers:
-        host: www.21463847.xyz
-  - &id010
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: cm1.awslcn.info
-    port: 25230
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cm1.awslcn.info
-  - &id011
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 78.47.217.216
-    port: 1935
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: www.casperco.online
-    port: 993
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: trojan
-    server: 89.221.224.93
-    port: 80
-    udp: true
-    password: 9e77b491-73d4-4ea3-985b-cfe3ae583580
-    sni: is1-t.sshmax.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: singapore.com
+    server: cf-lt.sharecentre.online
     port: 80
     cipher: auto
     uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
@@ -184,9 +406,34 @@ proxies:
     ws-opts:
       path: /api/v3/download.getFile
       headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id015
-    name: 🇺🇸_US_美国_5
+        host: ssrsub.v005.ssrsub.com
+  - &id034
+    name: 🇺🇸_US_美国_15
+    type: trojan
+    server: hk3.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: fb73fbf9-ed99-44ca-8eba-ccdcd7d59f67
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id035
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: 45.58.145.200
+    port: 30000
+    cipher: auto
+    uuid: 55545f9e-a561-454a-8dc0-8bc110e6b1c9
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702301098557
+      headers:
+        host: www.51652109.xyz
+  - &id036
+    name: 🇺🇸_US_美国_17
     type: vmess
     server: 172.233.188.217
     port: 55579
@@ -196,160 +443,6 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id016
-    name: 🇮🇳_IN_印度
-    type: vmess
-    server: ru1-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: 61cf7313-1503-4bab-beeb-ba69fd5843ae
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ru1-vmess.sshmax.xyz
-  - &id017
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 168.235.72.221
-    port: 15551
-    cipher: auto
-    uuid: 69510633-6acb-4291-a98e-0cdcc9bd5c51
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇩🇪_DE_德国_3
-    type: trojan
-    server: www.casperco.online
-    port: 1935
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 94.131.14.177
-    port: 80
-    cipher: auto
-    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id020
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 94.131.14.177
-    port: 2086
-    cipher: auto
-    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id021
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: usasb2.ip8.shop
-    port: 26460
-    cipher: auto
-    uuid: c15bccff-fa39-4252-f789-4f997542e0b4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ''
-  - &id022
-    name: 🇯🇵_JP_日本
-    type: trojan
-    server: 54.168.244.142
-    port: 3306
-    udp: true
-    password: d07a02a06191c99f
-    sni: n2.gladns.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /gateway/connect
-      headers:
-        host: n2.gladns.com
-  - &id023
-    name: 🇩🇪_DE_德国_4
-    type: vmess
-    server: 217.160.45.31
-    port: 8880
-    cipher: auto
-    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id024
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: us1.awslcn.info
-    port: 25239
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us1.awslcn.info
-  - &id025
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: us2.awslcn.info
-    port: 25257
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us2.awslcn.info
-  - &id026
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: trojan
-    server: 89.221.224.94
-    port: 80
-    udp: true
-    password: 28c79056-ccfd-4cc1-93d4-c337cc782e65
-    sni: is2-t.sshmax.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 45.58.153.24
-    port: 30000
-    cipher: auto
-    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1702392255355
-      headers:
-        host: www.77935707.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -403,6 +496,15 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -435,6 +537,15 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -465,6 +576,15 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
