--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,35 +6,80 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 45.58.153.24
-    port: 30000
-    cipher: auto
-    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
-    alterId: 64
-    tls: true
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: trojan
+    server: 89.221.224.94
+    port: 80
+    udp: true
+    password: 28c79056-ccfd-4cc1-93d4-c337cc782e65
+    sni: is2-t.sshmax.xyz
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1702392255355
+    network: tcp
   - &id002
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 172.234.99.161
+    port: 443
+    udp: true
+    password: 5f610684-118f-46cf-aa34-9951475b75ad
+    skip-cert-verify: true
+    network: tcp
+  - &id003
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
+    server: whatismyipaddress.com
+    port: 2052
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub.v005.ssrsub.com
-  - &id003
+        host: mgtow_cdn.yunjisuan.cf
+  - &id004
     name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.237.128.72
+    port: 14432
+    cipher: auto
+    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 38.91.107.37
+    port: 7001
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id006
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 38.91.107.37
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id007
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 35.90.10.174
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id008
+    name: 🇸🇪_SE_瑞典
+    type: ss
+    server: 45.8.147.80
+    port: 5741
+    password: Q5CEiebSuSl2qFkfE4ztG2
+    cipher: chacha20-ietf-poly1305
+  - &id009
+    name: 🇺🇸_US_美国_7
     type: vmess
     server: 172.233.188.217
     port: 55579
@@ -44,23 +89,131 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id004
-    name: 🇺🇸_US_美国_4
+  - &id010
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 185.231.205.80
+    port: 1443
+    password: MGQwNTgw
+    cipher: chacha20-ietf-poly1305
+  - &id011
+    name: 🇺🇦_UA_乌克兰
     type: vmess
-    server: singapore.com
-    port: 80
+    server: 193.238.153.14
+    port: 8443
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    uuid: 159693e0-5146-482d-9e46-8c4f2fc865b1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国_8
+    type: ss
+    server: 38.91.107.37
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: 217.160.45.31
+    port: 8880
+    cipher: auto
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
+  - &id014
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: 19235tj.matrixxx888.com
+    port: 19235
+    udp: true
+    password: af84eec7-8324-30b9-89b8-a8a7e4fb5d3a
+    sni: eplcgame.com
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: 19234tj.matrixxx888.com
+    port: 19234
+    udp: true
+    password: af84eec7-8324-30b9-89b8-a8a7e4fb5d3a
+    sni: eplcgame.com
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 38.180.33.136
+    port: 50104
+    cipher: auto
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 46.29.166.237
+    port: 47555
+    cipher: auto
+    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 45.138.70.247
+    port: 38767
+    cipher: auto
+    uuid: ec3936a2-f50d-48e8-b0bc-7929067bcc00
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /11451
+  - &id019
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: best-charm-pediatrician.glitch.me
+    port: 443
+    cipher: auto
+    uuid: 1d5fb496-19fb-48fb-9880-a147326dee62
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /1d5fb496-19fb-48fb-9880-a147326dee62-vmess
       headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id005
-    name: 🇺🇸_US_美国_5
+        host: best-charm-pediatrician.glitch.me
+  - &id020
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: bolder-metal-comma.glitch.me
+    port: 443
+    cipher: auto
+    uuid: dac61bb8-461c-4a4a-b14b-5a5ff6991fee
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dac61bb8-461c-4a4a-b14b-5a5ff6991fee-vmess
+      headers:
+        host: bolder-metal-comma.glitch.me
+  - &id021
+    name: 🇺🇸_US_美国_12
     type: vmess
     server: cf-lt.sharecentre.online
     port: 80
@@ -74,223 +227,8 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v005.ssrsub.com
-  - &id006
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: ss
-    server: 45.144.30.202
-    port: 28490
-    password: yZdRgske85Hou96z2dRdtH
-    cipher: chacha20-ietf-poly1305
-  - &id007
-    name: 🇨🇳_CN_中国_1
-    type: vmess
-    server: 159.75.178.50
-    port: 47551
-    cipher: auto
-    uuid: 2500a228-8c00-4934-81e0-22281c015a33
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id008
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 5.104.108.120
-    port: 443
-    udp: true
-    password: e86e242e-b5d5-46ae-a410-3684f7d70ac2
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 45.138.70.247
-    port: 38767
-    cipher: auto
-    uuid: ec3936a2-f50d-48e8-b0bc-7929067bcc00
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /11451
-  - &id010
-    name: 🇮🇷_IR_伊朗_1
-    type: vmess
-    server: duss.celebjared.pk
-    port: 80
-    cipher: auto
-    uuid: 781dfd50-3d2f-4d5b-99ef-47fa111bddb8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /Y07GAOt43udo1xvoAgfajHtB
-      headers:
-        host: duss.celebjared.pk
-  - &id011
-    name: 🇬🇧_GB_英国_1
-    type: vmess
-    server: UK99.5GTOCDOCAO.COM
-    port: 80
-    cipher: auto
-    uuid: 7a2c5296-683d-48db-9856-373cafac48b5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /5gtocdocao.com
-  - &id012
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 18.216.249.151
-    port: 46403
-    cipher: auto
-    uuid: 28dc6b61-09d8-4c19-b655-233cfb535567
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: trojan
-    server: gbs.pptv-tv.store
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 132.145.132.227
-    port: 37121
-    cipher: auto
-    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id015
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 144.202.81.122
-    port: 25514
-    cipher: auto
-    uuid: 13bf827e-55cd-4b46-e9f1-b7f9ffbe7955
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id016
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: avazbek-russian.duckdns.org
-    port: 8080
-    cipher: auto
-    uuid: d0fd80a1-0a99-43ea-a18c-046c5106a961
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id017
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 68.183.159.199
-    port: 2092
-    cipher: auto
-    uuid: 038e2714-5cbf-4812-fcfb-8726665c63b6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: internet.life.com.by
-    network: ws
-    ws-opts:
-      path: /telegram:@hkaa0
-  - &id018
-    name: 🇮🇷_IR_伊朗_2
-    type: vmess
-    server: 185.235.137.9
-    port: 80
-    cipher: auto
-    uuid: 781dfd50-3d2f-4d5b-99ef-47fa111bddb8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: internet.life.com.by
-    network: ws
-    ws-opts:
-      path: /Y07GAOt43udo1xvoAgfajHtB
-  - &id019
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 78.47.217.216
-    port: 1935
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国_2
-    type: ss
-    server: 45.87.153.246
-    port: 6199
-    password: f7EI0dGWQM42T8gwN9CZIj
-    cipher: chacha20-ietf-poly1305
-  - &id021
-    name: 🇮🇷_IR_伊朗_3
-    type: vmess
-    server: 79.143.84.117
-    port: 24141
-    cipher: auto
-    uuid: 46465bbe-628a-4988-ae3c-0c164237a039
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
   - &id022
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id023
-    name: 🇸🇪_SE_瑞典
-    type: vmess
-    server: www.shopify.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id024
-    name: 🇺🇸_US_美国_11
+    name: 🇺🇸_US_美国_13
     type: vmess
     server: www.visa.com
     port: 2082
@@ -304,65 +242,49 @@ proxies:
       path: /
       headers:
         host: mgtow_cdn.yunjisuan.cf
-  - &id025
-    name: 🇺🇸_US_美国_12
+  - &id023
+    name: 🇳🇱_NL_荷兰
     type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
+    server: 46.182.107.15
+    port: 30000
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id026
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: cdn-13.cdn2cdn.com
-    port: 2083
-    udp: true
-    password: qG9K8AGnn9XH5jUqeFu96g
-    sni: cdn13.cdn2cdn.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cdn13.cdn2cdn.com
-  - &id027
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 185.231.205.80
-    port: 1443
-    password: MGQwNTgw
-    cipher: chacha20-ietf-poly1305
-  - &id028
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 104.237.128.72
-    port: 14432
-    cipher: auto
-    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id029
-    name: 🇩🇪_DE_德国_3
-    type: trojan
-    server: www.casperco.online
-    port: 993
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
-  - &id030
+      path: /path/1702215223320
+  - &id024
     name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 132.145.132.227
+    port: 37121
+    cipher: auto
+    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id025
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id026
+    name: 🇺🇸_US_美国_16
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -376,60 +298,72 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id031
-    name: 🇺🇸_US_美国_15
+  - &id027
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id028
+    name: 🇫🇷_FR_法国_2
     type: trojan
-    server: us5.msio.uk
-    port: 50089
+    server: fr1.test3.net
+    port: 443
     udp: true
-    password: 801725d8-08df-4a20-b69a-e534b8c4ede7
+    password: df36f470-971e-11ee-b1bd-1239d0255272
     skip-cert-verify: true
     network: tcp
-  - &id032
-    name: 🇺🇸_US_美国_16
-    type: ss
-    server: 95.164.37.226
-    port: 8388
-    password: NjJkZmYw
-    cipher: chacha20-ietf-poly1305
-  - &id033
-    name: 🇺🇸_US_美国_17
-    type: ss
-    server: uk1.ssproxy.xyz
-    port: 8388
-    password: NjJkZmYw
-    cipher: chacha20-ietf-poly1305
-  - &id034
+  - &id029
     name: 🇺🇸_US_美国_18
+    type: trojan
+    server: jp2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: fb73fbf9-ed99-44ca-8eba-ccdcd7d59f67
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇷🇺_RU_俄罗斯联邦_3
+    type: ss
+    server: 45.144.30.202
+    port: 28490
+    password: yZdRgske85Hou96z2dRdtH
+    cipher: chacha20-ietf-poly1305
+  - &id031
+    name: 🇺🇸_US_美国_19
+    type: ss
+    server: 35.87.39.181
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id032
+    name: 🇺🇸_US_美国_20
     type: vmess
-    server: 38.180.33.136
-    port: 50104
+    server: 96.30.197.59
+    port: 56272
     cipher: auto
-    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    uuid: 8e8d5a10-7fd0-4818-8265-a4dc4a569d31
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id035
-    name: 🇬🇧_GB_英国_2
-    type: trojan
-    server: 35.178.97.234
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id036
-    name: 🇺🇸_US_美国_19
-    type: trojan
-    server: 23.162.168.236
-    port: 50089
-    udp: true
-    password: 801725d8-08df-4a20-b69a-e534b8c4ede7
-    sni: us5.msio.uk
-    skip-cert-verify: true
-    network: tcp
+  - &id033
+    name: 🇺🇸_US_美国_21
+    type: ss
+    server: 45.58.39.13
+    port: 58428
+    password: 31LdYhP8Ae
+    cipher: aes-256-gcm
 proxy-groups:
   - name: PROXY
     type: select
@@ -489,9 +423,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -530,9 +461,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -569,9 +497,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
